--- a/src/components/login-form/login-form.component.html
+++ b/src/components/login-form/login-form.component.html
@@ -1,10 +1,34 @@
+<form #loginForm="ngForm" novalidate>
 <div class="inputs">
-<ion-row><ion-input [(ngModel)]="account.email" type="email" placeholder="E-mail" id="email"></ion-input></ion-row>
-<ion-row><ion-input [(ngModel)]="account.password" type="password" placeholder="Password" ></ion-input></ion-row>
+<ion-row><ion-input 
+    [(ngModel)]="account.email" 
+    type="email" 
+    placeholder="E-mail" 
+    id="email"
+     name="email" 
+     #email="ngModel" 
+     required
+     pattern="[a-z0-9!#$%&'*+/=?^_`{\}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{\}~-]+)*@(?:[a-z0-9](?:[a-z0-9]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?"></ion-input>
+    </ion-row>
+    <div *ngIf="email.invalid && email.dirty">
+            <span class="global__input-error">Email addreess is not valid</span>
+            </div>
+<ion-row><ion-input 
+    [(ngModel)]="account.password" 
+    type="password" 
+    placeholder="Password" 
+    name="password" 
+    #password="ngModel" 
+    required 
+    pattern="[a-zA-Z0-9!@#$%^&*]{6,20}$"
+    ></ion-input></ion-row>
+    <div *ngIf="password.invalid && password.dirty">
+            <span class="global__input-error">Password must be at least 6 characters long</span>
+    </div>
 </div>
-<button ion-button full text-capitalize (click)="login()" id="login">Login</button>
+<button ion-button full text-capitalize (click)="login()" id="login" [disabled]="loginForm.invalid">Login</button>
 <label class="label1" click="navigateToPage('RegisterPage')">Wachtwoord vergeten</label>
 <label class="label2">Registreer nu!</label>
-
+</form>
 
 
