--- a/src/pages/explore/explore.scss
+++ b/src/pages/explore/explore.scss
@@ -1,2 +1,22 @@
 page-explore {
+ion-slides{
+    
+    //border-color: #22caf4;
+    //border-bottom-style: solid;
+    //border-top-style: solid;
+    margin-top: 5px;
+    height: 260px;
+    width: 415px;
+    
+    }
+    .swiper-container{
+        width: 401px;
+    }
+    .slide-zoom{
+        width: 450px;
+    }
+    ion-slide.swiper-slide{
+        width: 400px;
+    }
+    
 }
