--- a/src/components/login-form/login-form.component.scss
+++ b/src/components/login-form/login-form.component.scss
@@ -1,7 +1,7 @@
 ion-input {
     text-align: left;
     background-color: hsla(191, 86%, 54%, 0.342);
-    color: #22caf4;
+    color: #2b373a;
     width:100%;
     padding:7px;
     margin-top: 10px;
