--- a/src/pages/show-quotes/show-quotes.scss
+++ b/src/pages/show-quotes/show-quotes.scss
@@ -1,3 +1,13 @@
 page-show-quotes {
-
+    .triangle-isosceles {
+        position: relative;
+        padding: 15px;
+        margin: 1em 0 3em;
+        color: #000;
+        background: #b6b6b6;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        border-radius: 10px;
+        quotes: "\0022" "\0022";
+      }
 }
