wachtwoord vergeten click event

--- a/src/components/login-form/login-form.component.html
+++ b/src/components/login-form/login-form.component.html
@@ -27,8 +27,8 @@
     </div>
 </div>
 <button ion-button full text-capitalize (click)="login()" id="login" [disabled]="loginForm.invalid">Login</button>
-<label class="label1" click="navigateToPage('RegisterPage')">Wachtwoord vergeten</label>
-<label class="label2">Registreer nu!</label>
+<label class="label1">Wachtwoord vergeten</label>
+<label class="label2" (click)="navigateToPage('RegisterPage')">Registreer nu!</label>
 </form>
 
 
